<resources>
  <string name="app_name">Cartoons</string>

  <string name="menu_home">Home</string>
  <string name="menu_favourites">Favourites</string>
  <string name="menu_settings">Settings</string>

  <string name="creation_year">Creation year:</string>
  <string name="episodes">Episodes:</string>
  <string name="episode_duration">Episode duration (min):</string>
  <string name="creator">Creator:</string>
  <string name="creators">Creators:</string>
  <string name="genre">Genre:</string>
  <string name="genres">Genres:</string>
  <string name="back">Back</string>
  <string name="close">Close</string>
  <string name="search">Search</string>
  <string name="enter_phrase_here">Enter phrase here…</string>
  <string name="empty_list">There are no items to display</string>
  <string name="error_download_cartoons">Download cartoons error</string>
  <string name="search_cartoons">Search cartoons</string>

  <string name="tag_cartoons_list">Cartoons list</string>
  <string name="tag_search_text_field">Search text field</string>
  <string name="tag_top_bar">Top bar</string>
</resources>